# fastapi-backend-boiler

./: .env.dev  .gitignore  Dockerfile  alembic.ini  dev-down.sh  dev-reset.sh  dev-seed.sh  dev-up.sh  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2d954cc2c714_init.py
app/: main.py
app/api/v1/endpoints/: auth.py
app/auth/: deps.py
app/core/: config.py  security.py
app/db/: base.py  seed.py  session.py
app/models/: users.py
